flask example use

--- a/web_app/templates/stocks_form.html
+++ b/web_app/templates/stocks_form.html
@@ -12,6 +12,8 @@
             <option value="GOOG">Google (GOOGL)</option>
             <option value="AAPL">Apple (AAPL)</option>
             <option value="NFLX">Netflix (NFLX)</option>
+            <option value="NVDA">NVIDIA (NVDA)</option>
+
         </select>
         <br>
 
